unpackaged/main/default/objects/Authorize_Payment_Profile__c/Authorize_Payment_Profile__c.object-meta.xml
<CustomObject>
    <label>Authorize Payment Profile</label>
    <nameField>
        <displayFormat>AUTH{0000000}</displayFormat>
        <label>Authorize Payment Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorize Payment Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>