unpackaged/main/default/objects/Authorize_Payment_Profile__c/fields/Authorize_Payment_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Payment_Profile_ID__c</fullName>
    <label>Authorize Payment Profile ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>