unpackaged/main/default/objects/Authorize_Payment_Profile__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Contact__r.LastName +&#39;,&#39; +  Contact__r.FirstName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>