unpackaged/main/default/objects/Authorize_Payment_Profile__c/fields/Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits__c</fullName>
    <label>Last 4 Digits</label>
    <length>10</length>
    <type>Text</type>
</CustomField>