unpackaged/main/default/objects/Authorize_Payment_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>